@@ -105,8 +105,9 @@ class Peak_Router
 	    if(substr($server_uri, 0, 1) !== '/') $server_uri = '/'.$server_uri;
         if(substr($server_uri, -1, 1) !== '/') $server_uri = $server_uri.'/';
 		
-		//get server REQUEST_URI
-	    $this->request_uri = str_ireplace($this->base_uri,'', $server_uri);
+		//get server REQUEST_URI without base uri
+		if($this->base_uri !== '/') $this->request_uri = str_ireplace($this->base_uri,'', $server_uri);
+		else $this->request_uri = $server_uri;
 	    
 	    //fix request_uri to not begin/end with a slash
 	    if(substr($this->request_uri, 0, 1) === '/') $this->request_uri = substr($this->request_uri, 1);
