@@ -1,5 +1,7 @@
 #VERSION 0.8.2#
 
+ - fixed getRequestURI() when $base_uri = '/' (it mean that app located at the base of server url ex: http://example.com)
+
  - fixed double slash in url of method Peak_Router::setBaseUri() and Peak_Render::baseUrl()
 
  - method getObjectList() renamed to getObjectsList() in Peak_Registry
